--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ window.addEventListener("load", function(){
         slider.activate;
     });
     slider.value = 1.18;
+    usOdds.scrollIntoView({ behavior: "smooth", block: "center", inline: "nearest" });
     slider.scrollIntoView({ behavior: "smooth", block: "center", inline: "nearest" });
     document.getElementById("viewport-container").scrollIntoView({ behavior: "smooth", block: "bottom", inline: "nearest" });
 
